--- a/gallary.html
+++ b/gallary.html
@@ -95,12 +95,13 @@
 </head>
 <body>
     <header>
+        <h1><center>Anthariya Fashion Academy</center</h1>
         <nav>
             <div class="logo">
-                <a href="index.html">Your Name</a>
+                <a href="index.html">Thejashri Gowda</a>
             </div>
             <ul class="nav-links">
-                <li><a href="profile.html">Portfolio</a></li>
+                <li><a href="profile.html">Profile</a></li>
                
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -114,11 +115,20 @@
         <div class="gallery-item">
             <img src="p2.jpg" alt="Fashion Image 2">
         </div>
+        <div class="gallery-item">
+            <img src="p3.jpg" alt="Fashion Image 3">
+        </div>
+        <div class="gallery-item">
+            <img src="p4.jpg" alt="Fashion Image 3">
+        </div>
         <!-- Add more gallery items as needed -->
     </section>
 
     <footer>
-        <p>&copy; 2023 Your Name - All rights reserved.</p>
+        <p>&copy; 2023 Thejashri Gowda - All rights reserved.</p>
     </footer>
 </body>
 </html>
+
+
+
